modification du portfolio: ajout une photo et corriger le nom

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <div class="profile-photo-container">
+            <img src="rym.jpg" alt="Ma photo" class="profile-photo">
+        </div>
     </header>
 
     <section id="about">
         <h2>À propos de moi</h2>
-        <p>Bonjour ! Je m'appelle Yassine Ayari, j'ai 21 ans et je suis étudiant à l'Institut Supérieur des Études Technologiques de Tozeur. Actuellement en licence de technologie de l'information, je me spécialise dans le développement des systèmes d'information.
+        <p>Bonjour ! Je m'appelle Rym Ayari, j'ai 21 ans et je suis étudiant à l'Institut Supérieur des Études Technologiques de Tozeur. Actuellement en licence de technologie de l'information, je me spécialise dans le développement des systèmes d'information.
 
 Passionné par les technologies et l'informatique, j'ai acquis des compétences solides en programmation, en gestion de bases de données et en conception de systèmes. Je suis toujours à la recherche de nouveaux défis et de projets intéressants pour appliquer mes connaissances et apprendre davantage.
 
@@ -32,7 +35,7 @@ N'hésitez pas à me contacter si vous souhaitez discuter de projets, d'opportun
     <section id="cv">
         <h2>cv</h2>
         <div class="cv">
-            <a href="file:///C:/Users/FAMILLE/Downloads/CURRICULUM-VITALE.pdf" target="_blank">Voir le cv</a>
+            <a href="file:///C:/Users/FAMILLE/Desktop/portfolio/CURRICULUM-VITAE.pdf" target="_blank">Voir le cv</a>
         </div>
     </section>
 
